# snippetbox

./: README.md  config.py  pyproject.toml
snippetbox/: __init__.py  cli.py  schema.sql
snippetbox/accounts/: __init__.py  forms.py  models.py  routes.py
snippetbox/snippets/: __init__.py  forms.py  models.py  routes.py
snippetbox/static/css/: main.css
snippetbox/templates/: base.jinja
snippetbox/templates/accounts/: create.jinja  login.jinja
snippetbox/templates/partials/: nav.jinja
snippetbox/templates/snippets/: create.jinja  index.jinja
snippetbox/utils/: db.py  forms.py
